# skills

./: .envrc  .gitignore  README.md  pins.json
assemblyline/: SKILL.md
assemblyline/assets/templates/: assembly_line.py
assemblyline/examples/: relu_line.py  relu_steps.py
assemblyline/examples/toy-tasks/toy-ml/src/: relu.cpp  tensor.cpp
lib/python/: pyproject.toml
lib/python/assemblyline/: __init__.py  core.py
lib/python/buildlib/: __init__.py  knobs.py  paths.py  pins.py  result.py
lib/python/builds/: __init__.py  hrx_system.py  rocm.py  toy_ml.py
lib/python/tests/: test_assemblyline.py  test_buildlib.py  test_rocm.py
skills/assemblyline/: SKILL.md
skills/assemblyline/agents/: openai.yaml
skills/assemblyline/assets/templates/: assembly_line.py
skills/assemblyline/examples/: relu_line.py
skills/assemblyline/examples/toy-tasks/toy-ml/: CMakeLists.txt
skills/assemblyline/examples/toy-tasks/toy-ml/include/toy/: tensor.h
skills/assemblyline/examples/toy-tasks/toy-ml/tests/: relu_tests.cpp
skills/assemblyline/references/: library-api.md
skills/assemblyline/tests/: test_assemblyline.py
skills/build-ggml-hrx-kernel-bench-env/scripts/: ggml-hrx-kernel-bench.py
skills/build-hrx/scripts/: build_hrx.py
sources/: .gitignore
