[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tools"
version = "0.1.0"
description = "Shared Python libraries for the assembly-for-dummies skills: assemblyline (Codex-loop primitives), buildlib (build types), and builds (per-project build functions)."
requires-python = ">=3.11"

[tool.setuptools]
# Three independent top-level packages installed editable; tests/ is intentionally excluded.
packages = ["assemblyline", "buildlib", "builds"]
